[package]
name = "newsdata-io-api"
version = "0.9.1"
edition = "2021"
description = "Rust binding for the api of Newsdata.io"
license = "MIT"
repository = "https://github.com/raymondWai/newsdata-io-api"

[dependencies]
log = "0.4.22"
reqwest = "0.12.5"
serde = { version = "1.0.204", features = ["derive"] }
ureq = { version = "2.10.0", features = ["json"] }
